test/classes/delete-free/owned/owned-from-borrow.good
owned-from-borrow.chpl:3: In function 'testOwned':
owned-from-borrow.chpl:5: error: cannot adopt a borrowed MyClass
